--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.HueColors.SplashScreen" parent="Theme.SplashScreen">
+    <style name="Theme.HueColors.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">#FF0F0F0F</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
         <item name="postSplashScreenTheme">@style/Theme.HueColors</item>
